Update protos to correct java packages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.application.name=driver-svc
 spring.main.web-application-type=none
 
 grpc.server.port=3007
+grpc.server.in-process-name=driver-svc
+grpc.server.security.enabled=false
 
 spring.docker.compose.enabled=false
+
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=order-service
